bynkc/tests/fixtures/negative/311_http_limit_on_bodyless/src/api.bynk
context api

service api from http {
  @limit(maxBody: 100)
  on GET("/ping") by v: Visitor () -> Effect[HttpResult[String]] {
    Ok("pong")
  }
}
